--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+
 @font-face {
   font-family: "Pilat Extended";
   src: url("./assets/fonts/pilat-extended-light.woff2") format("woff2"),
